# k3s

./: CHANGELOG.md  Dockerfile  README.md  ansible.cfg  inventory.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml  postCreateCommand.sh
.github/workflows/: build-container.yaml  build_push_container.yaml
collections/: requirements.yml
collections/ansible_collections/sysengquick/k3s/playbooks/: create_cluster.yml  deploy_rancher.yml  prep_nodes.yml  remove_cluster.yml  remove_snapshot.yml  snapshot_cluster.yml  test.yml
collections/sysengquick/k3s/: CHANGELOG.md  README.md  galaxy.yml
collections/sysengquick/k3s/meta/: runtime.yml
collections/sysengquick/k3s/playbooks/: create_nodes.yml  create_template.yml  deploy_k3s.yml  rollback_cluster.yml
collections/sysengquick/k3s/playbooks/group_vars/all/: cluster.yml  commands.yaml
collections/sysengquick/k3s/playbooks/vars/proxmox/: vault.example.yml  vault.yml
collections/sysengquick/k3s/roles/k3sup/defaults/: main.yml
collections/sysengquick/k3s/roles/k3sup/tasks/: add_servers_loop.yml  add_workers_loop.yml  deploy_cluster.yml  setup_kube_vip.yml  setup_kube_vip_cloud_controller.yml  setup_kube_vip_cloud_controller_tasks.yml  setup_kube_vip_tasks.yml
collections/sysengquick/k3s/roles/proxmox/defaults/: main.yml
collections/sysengquick/k3s/roles/proxmox/tasks/: create_node.yml  create_template.yml  loop_nodes.yml  remove_node.yml  remove_template.yml  start_node.yml
scripts/: turndown.sh  turnup.sh  update_inventory.py
(+19 files in other folders)
